# proyecto-ama-intent

./: .dockerignore  .env  .env.example  .env.vercel.example  .flake8  .gitignore  .sesskey  ANALISIS_MEJORAS_MINIMAX.md  ARCHITECTURE_DIAGRAM.md  CHANGELOG.md  CHANGELOG_NUEVAS_MEJORAS.md  DASHBOARD_README.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.txt  MANUAL_DE_FUNCIONES.md  Makefile  PROBLEMAS_IDENTIFICADOS.md  README.md  REFACTORING_SUMMARY.md  RESUMEN_MEJORAS_MINIMAX.md  RESUMEN_MODIFICACIONES.md  SUPABASE_SETUP.md  VERCEL_DEPLOYMENT.md  ama_complete_test_suite.py  ama_main.py  ama_master_installer.py  ama_one_click_deploy.py  ama_personal_dashboard.py  ama_phase_integrator.py  asgi.py  brain_integrated.py  brain_tick.py  demo_minimax_integration.py  docker-compose.production.yml  docker-compose.yml  examples_kimi_k2.py  index.html  (+11 more)
agents/: __init__.py
ama_data/: __init__.py
benchmarks/: sddcs_benchmark.py
bridge/: __init__.py  server.py
control/: pid_homeostasis.py
cortex/: attention.py  state.py
decision/: actuator.py  dmd.py  q_value.py
docker/: entrypoint.sh
docs/: API.md  DEPLOYMENT_GUIDE.md  INSTALL.md  MINIMAX_INTEGRATION.md  PLUGINS.md  SDDCS_FORMULATION.md  SDDCS_IMPACT_ANALYSIS.md  SDDCS_KAPREKAR_INTEGRATION.md  informe_rocketml_rml.md  placeholder.txt  plan_maestro_unificacion.html
engines/: adaptive_pruning.py  ama_g.py  ama_intent.py  ama_phase_integrator.py  bdc_search.py  cognitive_brain.py  dmd.py  engine_bus.py  lfpi.py
governance/: amag_audit.py
integrations/: README.md  (+1 more)
(+112 files in other folders)
